--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Days Since I Quit" />
     <meta property="og:description" content="Track your journey onchain. Web3 habit tracker on Base." />
-    <meta property="og:image" content="https://dsiq.app/cover.png" />
+    <meta property="og:image" content="https://days-since-iquit.vercel.app/cover.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://dsiq.app" />
