--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="base:app_id" content="69768ee288e3bac59cf3d8bc" />
+    <meta name="base:builder_code" content="bc_2i18vtg6" />
     
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
