--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Days Since I Quit" />
-    <meta property="og:title" content="Days Since I Quit — Onchain Habit Tracker" />
+    <meta property="og:site_name" content="Days Since I Quit — Onchain habit tracker" />
+    <meta property="og:title" content="Days Since I Quit — Onchain habit tracker" />
     <meta property="og:description" content="Track your journey onchain. Web3 habit tracker on Base. Break bad habits with permanent progress." />
-    <meta property="og:image" content="https://days-since-iquit.vercel.app/cover.png?v=2" />
+    <meta property="og:image" content="https://days-since-iquit.vercel.app/cover.png?v=3" />
     <meta property="og:image:alt" content="Days Since I Quit - Onchain habit tracker on Base" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -51,12 +51,12 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Days Since I Quit — Onchain Habit Tracker" />
     <meta name="twitter:description" content="Track your journey onchain. Web3 habit tracker on Base." />
-    <meta name="twitter:image" content="https://days-since-iquit.vercel.app/cover.png?v=2" />
+    <meta name="twitter:image" content="https://days-since-iquit.vercel.app/cover.png?v=3" />
     <meta name="twitter:image:alt" content="Days Since I Quit - Onchain habit tracker on Base" />
     
     <!-- Farcaster Frame -->
     <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://days-since-iquit.vercel.app/cover.png?v=2" />
+    <meta property="fc:frame:image" content="https://days-since-iquit.vercel.app/cover.png?v=3" />
     <meta property="fc:frame:image:aspect_ratio" content="1.91:1" />
     <meta property="fc:frame:button:1" content="🚀 Open App" />
     <meta property="fc:frame:button:1:action" content="link" />
